fixed spacing problem with army logos

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -122,7 +122,7 @@ color:#1E1E1E;
 }
 .factiontitle{
 	text-align:center;
-	width:100px;
+	width:95px;
 }
 .rowactions{
 	width:40px;
